# AI-Financial-Document-Analyst

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml  pytest_integration_output.txt  pytest_output.txt  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/ingestion/: pdf_parser.py  storage.py  validation.py
backend/app/models/: __init__.py  base.py  company.py  conversation_message.py  conversation_thread.py  document_chunk.py  enums.py  management_tone.py  report.py  report_page.py  tone_evolution.py
backend/app/repositories/: conversation_repository.py  report_repository.py
backend/app/schemas/: agent.py  embedding.py  report.py  search.py  tone.py
backend/app/tasks/: celery_app.py  ingestion.py
backend/migrations/: env.py
backend/migrations/versions/: 20260610_0001_phase1a_ingestion.py  20260610_0002_phase1b_sections.py  20260610_0003_phase1c_chunks.py  20260611_0004_phase2a_embeddings.py  20260611_0010_phase5_management_tone.py  20260611_0011_phase7_conversation_threads.py  20260618_1002_da2e50935604_automation_pipeline.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_agent_api.py  test_analytics_api.py  test_comparisons_api.py  test_embeddings_api.py  test_hybrid_search_api.py  test_metrics_api.py  (+4 more)
backend/validation/: e2e_validation.py  seed_demo.py
(+100 files in other folders)
